# MidnightC2

./: .gitignore  MidnightC2.sln  README.md  build.bat  build.ps1  build_all.bat  build_winpe.ps1  check_loaded_dll.ps1  dropbox-url-update.txt  listener.html  version.txt  winpe_injector.ps1
MidnightAgent/: MidnightAgent.csproj  Program.cs
MidnightAgent/Core/: Agent.cs  AgentInfo.cs  AgentState.cs  AutoUpdater.cs  Config.cs  Logger.cs  PowerWatchdog.cs
MidnightAgent/Features/: AnyDeskFeature.cs  CdFeature.cs  ClearCookieFeature.cs  CookieFeature.cs  FeatureRegistry.cs  FeatureResult.cs  FileDownloadFeature.cs  FileUploadFeature.cs  FtpFeature.cs  HelpFeature.cs  IFeature.cs  JobFeature.cs  KeyloggerFeature.cs  LocationFeature.cs  LogFeature.cs  MenuFeature.cs  MicFeature.cs  NickFeature.cs  ProcessFeature.cs  RestartFeature.cs  RevShellFeature.cs  ScreenshotFeature.cs  SearchFeature.cs  SelfDestructFeature.cs  ShellFeature.cs  StreamCamFeature.cs  SystemInfoFeature.cs  UpdateFeature.cs  VncFeature.cs  WallpaperFeature.cs  WebFeature.cs  WebcamFeature.cs
MidnightAgent/Helpers/: AudioHelper.cs  NetworkHelper.cs  ProcessHelper.cs  SipsorceryHelper.cs  VoiceStreamManager.cs
MidnightAgent/Installation/: Installer.cs  PrivilegeHelper.cs
MidnightBuilder/: MidnightBuilder.csproj  Program.cs
MidnightLoader/: Cargo.toml  app.manifest  build.rs  encrypt_payload.ps1
MidnightLoader/.cargo/: config.toml
MidnightLoader/src/: main copy_bakup.rs  main.rs  main.rs.temp
WindowsPE SET/: BOOTMGR  Version.txt  bootmgr.efi
web/: index.html  listener.html
(+21 files in other folders)
