[package]
name = "midnight_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
clroxide = "1.1.1"
flate2 = "1.1.9"
# Windows API bindings
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_ClrHosting",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_Console",
] }

[build-dependencies]
flate2 = "1.1.9"
winres = "0.1"

[profile.release]
# Optimize for size and security
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Smaller binary
